# beads

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  beads.go  beads_hash_multiclone_test.go  beads_integration_test.go  beads_multidb_test.go  beads_test.go  default.nix  flake.nix  go.mod  go.sum  install.ps1
.beads/: beads.db.backup  beads.jsonl  config.json  config.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/agents/: task-agent.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test-pypi.yml
adapters/mcp/: README.md  context-management.md  pypi.md  pyproject.toml  setup-daemon.md  test_multi_repo.py
adapters/mcp/src/mcp_beads/: __init__.py  client.py  config.py  daemon.py  models.py  server.py  tools.py
adapters/mcp/tests/: __init__.py
adapters/mcp/tests/integration/: test_client_integration.py  test_mcp_server_integration.py  test_worktree_separate_dbs.py
adapters/mcp/tests/unit/: test_client.py  test_daemon_health_check.py  test_tools.py
cmd/bd/: autoflush.go  autoflush_version_test.go  autoimport.go  autostart_test.go  comments.go  comments_test.go  compact.go  (+66 more)
commands/: blocked.md  close.md  comments.md  compact.md  create.md  daemon.md  daemons.md  delete.md  dep.md  epic.md  export.md  import.md  init.md  label.md  list.md  quickstart.md  ready.md  rename-prefix.md  reopen.md  restore.md  show.md  stale.md  stats.md  sync.md  update.md  version.md  workflow.md
docs/: adaptive-ids.md  advanced.md  collision-math.md  config.md  exclusive-lock.md  extending.md  faq.md  hash-id-design.md  installing.md  labels.md  linting.md  plugin.md  quickstart.md  releasing.md  troubleshooting.md
examples/: README.md
scripts/: README.md  bump-version.sh  install.sh  release.sh  rename-bd-to-beads.sh  update-homebrew.sh
(+261 files in other folders)
