[project]
name = "mcp-beads"
version = "0.30.3"
description = "MCP server for beads issue tracker."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastmcp==2.13.0.1",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
]
authors = [
    {name = "Beads Contributors"}
]
maintainers = [
    {name = "Beads Contributors"}
]
keywords = ["beads", "mcp", "claude", "issue-tracker", "ai-agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Bug Tracking",
]

[project.urls]
Homepage = "https://github.com/shaneholloman/beads"
Repository = "https://github.com/shaneholloman/beads"
Documentation = "https://github.com/shaneholloman/beads/blob/main/integrations/mcp/README.md"
Issues = "https://github.com/shaneholloman/beads/issues"

[project.scripts]
mcp-beads = "mcp_beads.server:main"


[tool.ruff]
target-version = "py310"
line-length = 115

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
